# zlogger

./: CMakeLists.txt  README.md
examples/: log_to_console.cpp  log_to_file.cpp  multithreaded_logging.cpp  switch_between_file_and_console_logging.cpp
include/: zlogger.hpp
